--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,8 +74,8 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maze/SandBox.SandBox
-GameDefaultMap=/Game/Maze/SandBox.SandBox
+EditorStartupMap=/Game/Maze/lvl/Main.Main
+GameDefaultMap=/Game/Maze/lvl/Main.Main
 
 [ConsoleVariables]
 fx.Niagara.ForceLastTickGroup=1
