Creation Du mainMenu et du gameInstance

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,6 +76,7 @@ ManualIPAddress=
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maze/lvl/Main.Main
 GameDefaultMap=/Game/Maze/lvl/Main.Main
+GameInstanceClass=/Game/Maze/BP_GameInstance.BP_GameInstance_C
 
 [ConsoleVariables]
 fx.Niagara.ForceLastTickGroup=1
